2008-11-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* calendar/cal-menu.el (cal-menu-scroll-menu): Add bindings for
	week forward/backward.

2008-11-20  Juanma Barranquero  <lekktu@gmail.com>

	* ehelp.el (electric-help-map, ehelp-map): Define within defvar.
	(with-electric-help): Fix typo and reflow docstring.

2008-11-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* buff-menu.el (Buffer-menu-short-ellipsis): New constant.
	(Buffer-menu-buffer+size): Use it, fix last change, and simplify.
	(list-buffers-noselect): Don't need to pad.

2008-11-20   Toru TSUNEYOSHI  <t_tuneyosi@hotmail.com>

	* buff-menu.el (Buffer-menu-buffer+size, list-buffers-noselect):
	Pay attention to char widths when computing string sizes.

2008-11-20  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/bytecomp.el (byte-compile-dynamic-docstrings)
	(byte-compile-output-docform): Reflow docstrings.
	(no-byte-compile): Fix typo in docstring.
	(byte-recompile-directory, compile-defun): Doc fixes.
	(emacs-lisp-file-regexp, byte-compile-verbose)
	(byte-compile-compatibility, byte-optimize, byte-compile-delete-errors)
	(byte-compile-dynamic-docstrings, byte-optimize-log)
	(byte-compile-error-on-warn, byte-compile-warnings)
	(byte-compile-generate-call-tree, byte-compile-call-tree-sort):
	Remove * from defcustom docstrings.

2008-11-20  Glenn Morris  <rgm@gnu.org>

	* format.el (format-alist, format-write-file): Doc fix.

	* proced.el (proced-available): New variable.
	(proced-process-attributes): Move availability check from previous
	change from here...
	(proced): ... to here.

	* vc-hg.el (vc-hg-diff-switches): New option.
	(vc-hg-diff): Apply diff switches.  (Bug#1017)

	* calc/calc-units.el (math-additional-units): Doc fix (active voice).

	* progmodes/fortran.el (fortran-mode-map): Add some menu :help.

2008-11-20  Stephen Berman  <Stephen.Berman@gmx.net>

	* files.el (auto-mode-alist): Recognize more OpenOffice.org extensions.

2008-11-19  Juanma Barranquero  <lekktu@gmail.com>
